--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -27,4 +27,4 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_HELLOSTU_XYZ_ED8A4 }}'
           channelId: live
-          projectId: hellostu-xyz
+          projectId: hellostu-xyz-ed8a4
