--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-gifs": "^1.1.0",
     "gatsby-remark-images": "^6.9.0",
     "gatsby-remark-prismjs": "^6.9.0",
     "gatsby-remark-responsive-iframe": "^5.9.0",
