--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
-    "gatsby-plugin-google-gtag": "^4.9.0",
     "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-manifest": "^4.9.0",
     "gatsby-plugin-mdx": "^3.9.0",
     "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-panelbear": "^1.1.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
