--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.3",
+    "chart.js": "^3.7.1",
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
@@ -30,9 +31,11 @@
     "gatsby-transformer-sharp": "^4.9.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "recharts": "^2.1.9",
     "sass": "^1.49.9"
   },
   "devDependencies": {
