--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-remark-copy-linked-files": "^5.9.0",
+    "gatsby-remark-emoji": "^0.0.3",
     "gatsby-remark-gifs": "^1.1.0",
     "gatsby-remark-images": "^6.9.0",
     "gatsby-remark-prismjs": "^6.9.0",
@@ -36,6 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "recharts": "^2.1.9",
+    "remark-emoji": "^3.0.2",
     "sass": "^1.49.9"
   },
   "devDependencies": {
