blog post updated

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.6.22",
     "bulma": "^0.9.3",
     "chart.js": "^3.7.1",
+    "chartjs-adapter-moment": "^1.0.0",
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
@@ -30,6 +31,7 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "moment": "^2.29.1",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^4.0.1",
