--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.9.3",
     "chart.js": "^3.7.1",
     "chartjs-adapter-moment": "^1.0.0",
+    "dotenv": "^16.0.0",
     "gatsby": "^4.9.0",
     "gatsby-plugin-feed": "^4.9.0",
     "gatsby-plugin-gatsby-cloud": "^4.9.0",
