--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-offline": "^5.9.0",
     "gatsby-plugin-panelbear": "^1.1.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-react-leaflet": "^3.0.3",
     "gatsby-plugin-sass": "^5.9.0",
     "gatsby-plugin-sharp": "^4.9.0",
     "gatsby-remark-copy-linked-files": "^5.9.0",
@@ -32,6 +33,7 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-remark": "^5.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "prismjs": "^1.25.0",
     "react": "^17.0.1",
@@ -39,6 +41,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-leaflet": "^3.2.5",
     "recharts": "^2.1.9",
     "remark-emoji": "^3.0.2",
     "sass": "^1.49.9"
