--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-remark-responsive-iframe": "^5.13.0",
     "gatsby-remark-smartypants": "^5.13.0",
     "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-source-google-photos": "^3.1.1",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "leaflet": "^1.8.0",
