--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
+        env: 
+          GOOGLE_OAUTH_CLIENT_ID: '${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}'
+          GOOGLE_OAUTH_CLIENT_SECRET: '${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}'
+          GOOGLE_PHOTOS_TOKEN: '${{ secrets.GOOGLE_PHOTOS_TOKEN }}'
         run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
