--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.3.1",
   "author": "Stuart Mackenzie",
   "dependencies": {
+    "@browniebroke/gatsby-image-gallery": "^7.0.7",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.27.2",
