--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.3.1",
   "author": "Stuart Mackenzie",
   "dependencies": {
-    "@browniebroke/gatsby-image-gallery": "^7.0.7",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.27.2",
@@ -43,6 +42,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
+    "react-image-gallery": "^1.2.9",
     "react-leaflet": "^3.2.5",
     "sass": "^1.51.0"
   },
