--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-filesystem": "^5.4.0",
     "gatsby-transformer-remark": "^6.4.0",
     "gatsby-transformer-sharp": "^5.4.0",
+    "hyvor-talk-react": "^2.0.1",
     "leaflet": "^1.9.3",
     "moment": "^2.29.3",
     "prismjs": "^1.29.0",
