--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "@fontsource/gochi-hand": "^5.0.19",
-    "@fontsource/poppins": "^5.0.14",
     "astro": "^4.9.1",
+    "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "astro-imagetools": "^0.9.0",
     "astro-seo": "^0.8.3"
