--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.0.1",
+    "@astrojs/react": "^3.4.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.9.1",
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "astro-imagetools": "^0.9.0",
-    "astro-seo": "^0.8.3"
+    "astro-seo": "^0.8.3",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-moment": "^1.0.1",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1"
   }
 }
