--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1"
   }
 }
