--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "astro-seo": "^0.8.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-moment": "^1.0.1",
-    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-google-charts": "^4.0.1",
-    "sanitize-html": "^2.13.0"
+    "react-google-charts": "^4.0.1"
   }
 }
