--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "astro-seo": "^0.8.3",
     "chart.js": "^4.4.3",
     "chartjs-adapter-moment": "^1.0.1",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
