--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.1.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "apexcharts": "^3.49.1",
     "astro": "^4.9.1",
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
@@ -26,7 +27,6 @@
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-google-charts": "^4.0.1"
+    "react-dom": "^18.3.1"
   }
 }
