--- a/package.json
+++ b/package.json
@@ -14,19 +14,13 @@
     "@astrojs/react": "^3.4.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "apexcharts": "^3.49.1",
     "astro": "^4.9.1",
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "astro-imagetools": "^0.9.0",
     "astro-seo": "^0.8.3",
-    "chart.js": "^4.4.3",
-    "chartjs-adapter-moment": "^1.0.1",
     "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1"
+    "moment": "^2.30.1"
   }
 }
