--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^3.1.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@jam-comments/astro": "^2.5.1",
     "apexcharts": "^3.49.1",
     "astro": "^4.11.3",
     "astro-font": "^0.0.81",
