--- a/firebase.json
+++ b/firebase.json
@@ -6,14 +6,20 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "redirects": [ {
-    "source": "/podcast.xml",
-    "destination": "https://feeds.acast.com/public/shows/hello-stu",
-    "type": 301
-  } ,{
-    "source": "/posts-rss.xml",
-    "destination": "https://hellostu.xyz/rss.xml",
-    "type": 301
-  } ]
+    "redirects": [
+      {
+        "source": "/podcast.xml",
+        "destination": "https://feeds.acast.com/public/shows/hello-stu",
+        "type": 301
+      },
+      {
+        "source": "/posts-rss.xml",
+        "destination": "https://hellostu.xyz/rss.xml",
+        "type": 301
+      }
+    ]
+  },
+  "functions": {
+    "source": "functions"
   }
 }
