--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "astro-imagetools": "^0.9.0",
     "astro-seo": "^0.8.3",
     "leaflet": "^1.9.4",
-    "moment": "^2.30.1"
+    "markdown-it": "^14.1.0",
+    "moment": "^2.30.1",
+    "sanitize-html": "^2.13.0"
   }
 }
