--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -21,8 +21,8 @@ jobs:
         run: npm install
       - name: Build
         env:
-          GOOGLE_OAUTH_CLIENT_ID: '${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}'
-          GOOGLE_OAUTH_CLIENT_SECRET: '${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}'
+          JAM_COMMENTS_API_KEY: '${{ secrets.JAM_COMMENTS_API_KEY }}'
+          JAM_COMMENTS_DOMAIN: '${{ secrets.JAM_COMMENTS_DOMAIN }}'
         run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
