--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -7,6 +7,9 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
   workflow_dispatch:
+  repository_dispatch:
+    types: [dependency_update]
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
