--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/mdx": "^3.1.7",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
     "@jam-comments/astro": "^2.7.0",
     "apexcharts": "^3.49.1",
-    "astro": "^4.14.2",
+    "astro": "^4.15.8",
     "astro-font": "^0.0.81",
     "astro-icon": "^1.1.0",
     "astro-imagetools": "^0.9.0",
     "astro-seo": "^0.8.3",
+    "astro-social-share": "^2.0.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1"
   }
